...
        style={[styles.button, { backgroundColor }]}
        disabled={selectedLotteries.length === 0}
      >
        <Text style={styles.text}>Register</Text>
      </TouchableOpacity>
      <View style={styles.title}>
        <Text style={styles.titleText}>Lotteries</Text>
        <MaterialIcons name="casino" size={36} color="black" />
      </View>
      <LotteryList
        lotteries={lotteries.data}
        loading={lotteries.loading}
        onPress={handleSelect}
...
